fix: strange overflow issue

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     align-items: center;
     background-color: #3d3930;
     background-image: url("bg-tile.jpg");
+    overflow: hidden;
 }
 
 #cat {
